--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="AAC 보드">
   <title>AAC 보드 (정렬/편집/탭추가/크기조절/내보내기)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
