--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="AAC 보드">
-  <title>AAC 보드 (정렬/편집/탭추가/크기조절/내보내기)</title>
+  <title>AAC 보드</title>
+
+  <!-- 아이패드에서 앱처럼 보이게 하는 설정 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="AAC 보드">
+</head>
+<body>
+  <!-- 여기부터 당신 AAC 화면 내용 -->
+</body>
+</html>
 
   <style>
     :root {
@@ -1251,3 +1258,4 @@
 </script>
 </body>
 </html>
+
